# PDCurses

./: CMakeLists.txt  curses.h
demos/: CMakeLists.txt  basic_demo.c  testcurs.c
pdcurses/: CMakeLists.txt  mouse.c
wincon/: CMakeLists.txt  pdcwin.h
